tests/snapshots/examples_fixtures/type_system__failing__127_match_missing_arrow.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/127_match_missing_arrow.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Missing Match Arm Arrow

I was expecting `->` in this match arm, but I found an integer literal.

  examples/type_system/failing/127_match_missing_arrow.flx:24:7
   |
24 |     0 1,
   |       ^

Note:
  while parsing `match` expression

Help:
  Write match arms as `match x { pattern -> body, ... }`.
== stdout ==
<not executed>
